lucia-macros/tests/ui/error_enum/duplicated_local_pkg_attr.stderr
error: It is not possible to have more than one `pkg` attribute in the same element.
 --> tests/ui/error_enum/duplicated_local_pkg_attr.rs:6:3
  |
6 |   #[pkg::aux]
  |   ^^^^^^^^^^^

error: It is not possible to have more than one `pkg` attribute in the same element.
  --> tests/ui/error_enum/duplicated_local_pkg_attr.rs:20:3
   |
20 |   #[pkg::before_sending]
   |   ^^^^^^^^^^^^^^^^^^^^^^

error: It is not possible to have more than one `pkg` attribute in the same element.
  --> tests/ui/error_enum/duplicated_local_pkg_attr.rs:37:3
   |
37 |   #[pkg::req_data]
   |   ^^^^^^^^^^^^^^^^
